--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@rider/models": "github:rider-org/models",
-    "@rider/packages": "github:rider-org/packages",
+    "@rider/models": "github:rider-org/models#main",
+    "@rider/packages": "github:rider-org/packages#main",
     "@tanstack/react-query": "^5.66.9",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
@@ -41,16 +41,17 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "packages@latest": "link:rider-org/packages@latest",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "tailwindcss": "^3.4.17",
     "typescript-eslint": "^8.25.0"
   },
   "devDependencies": {
@@ -65,5 +66,10 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "zapatos"
+    ]
+  }
 }
